# qa_guru_python_6_20

./: README.md  pyproject.toml
tests/: test_reqres_schemas.py  test_reqres_users.py
