[tool.poetry]
name = "qa-guru-python-6-20"
version = "0.1.0"
description = ""
authors = ["Svetlana Popova <pss96.svetlana@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"
requests = "^2.31.0"
jsonschema = "^4.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
